# harmonia-dapp

./: .gitignore  PR_REPORT_LAYOUT_UNIFICATION.md  PR_SUMMARY.md  README.md  biome.json  bun.lockb  package-lock.json  package.json
.github/workflows/: rust.yml  wallet-service.yml
.husky/: pre-commit
apps/contracts/: Cargo.toml
apps/contracts/notification-router/: Cargo.toml  README.md
apps/contracts/notification-router/src/: constants.rs  contract.rs  errors.rs  lib.rs  test.rs  types.rs
apps/contracts/notification-router/test_snapshots/test/: test_all_categories.1.json  test_all_severity_levels.1.json  test_batch_emit.1.json  test_log_governance_event.1.json  test_log_member_event.1.json  test_log_system_event.1.json  test_log_treasury_event.1.json
apps/webapp/: .env.sample  README.md  bun.lockb  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
contracts/contracts/voting-nft/: Cargo.toml
contracts/contracts/voting-nft/src/: datatypes.rs  lib.rs  test.rs  votingnft.rs
contracts/contracts/voting-nft/test_snapshots/test/: test_get_nft_not_found.1.json  test_initialization.1.json  test_mint_nft_duplicate_category_fails.1.json  test_mint_nft_unauthorized.1.json
contracts/notification-router/: Cargo.toml
services/stellar-wallet/: .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  JWT_INTEGRATION.md  eslint.config.ts  nodemon.json  package.json  tsconfig.eslint.json  tsconfig.json
services/stellar-wallet/src/soroban/contracts/kyc-kyb-contract/: Cargo.toml  Makefile  README.md
services/stellar-wallet/src/soroban/contracts/kyc-kyb-contract/src/: kyc-contract.rs  lib.rs  test.rs
services/supabase/: .env.sample  (+5 more)
(+351 files in other folders)
